Add data files and temp hardcode internal data.